# fileflow

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  GEMINI.md  README.MD  README.md  package.json  pnpm-lock.yaml  test.flow
proto/: orchestrator.proto
