[workspace]
resolver = "2"
members = [
    "packages/engine",
    "packages/journal",
    "packages/hyperquery",
    "packages/flowlang",
    "packages/worker-runtime",
    "packages/plugins",
    "packages/vfs",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
blake3 = "1.5"
sqlite = "0.32"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2.1"
cbor4ii = "0.3"
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
